--- a/style.css
+++ b/style.css
@@ -20,6 +20,9 @@ body * {
 header {
 	padding-top: 32px;
 	text-align: center;
+
+	/* for animation */
+	height: calc(120px + 32px);
 }
 
 header div {
@@ -109,3 +112,55 @@ section ul li:hover {
 .social-list svg {
 	width: 32px;
 }
+
+/* animation: name duration timing-function delay iteration-count direction fill-mode; */
+
+/* animation elements */
+header div {
+
+	animation: fromTop .7s .2s backwards;
+}
+
+main section {
+
+	animation: fromBottom .7s backwards;
+}
+
+main section:nth-child(1) {
+	animation-delay: 0;
+}
+
+main section:nth-child(2) {
+	animation-delay: .4s;
+}
+
+main section:nth-child(3) {
+	animation-delay: .8s;
+}
+
+
+/* animation defines*/
+@keyframes fromTop {
+	from {
+		opacity: 0;
+		transform: translateY(-30px);
+	}
+
+	to {
+		opacity: 1;
+		transform: translateY(0);
+	}
+}
+
+@keyframes fromBottom {
+	from {
+		opacity: 0;
+		transform: translateY(30px);
+	}
+
+	to {
+		opacity: 1;
+		transform: translateY(0);
+	}
+}
+
